--- a/StudentSupport/templates/principal/manage_committees.html
+++ b/StudentSupport/templates/principal/manage_committees.html
@@ -29,6 +29,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'assets/css/jquery.mCustomScrollbar.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'assets/css/custom_css/bg.css' %}">
     <script type="text/javascript">
+    // TODO : Get this table into table tag not from here. and add sweet alert also.
     $(document).ready(function($)
     {
         //ajax row data
@@ -480,7 +481,7 @@
                         <i class="feather icon-menu"></i>
                     </a>
                     <a href="{% url 'principal_dashboard' %}">
-                        <img class="img-fluid" src="{% static 'assets/images/logo.png' %}" alt="Theme-Logo">
+                        <img class="img-fluid" src="{% static 'assets/images/logo_sss3.png' %}" alt="Theme-Logo" style="max-width:85%;">
                     </a>
                     <a class="mobile-options">
                         <i class="feather icon-more-horizontal"></i>
