--- a/StudentSupport/templates/principal/principal_dashboard.html
+++ b/StudentSupport/templates/principal/principal_dashboard.html
@@ -79,7 +79,7 @@
                         <i class="feather icon-menu"></i>
                     </a>
                     <a href="{% url 'principal_dashboard' %}">
-                        <img class="img-fluid" src="{% static 'assets/images/logo.png' %}" alt="Theme-Logo">
+                        <img class="img-fluid" src="{% static 'assets/images/logo_sss3.png' %}" alt="Theme-Logo" style="max-width:85%;">
                     </a>
                     <a class="mobile-options">
                         <i class="feather icon-more-horizontal"></i>
